fixed image bleed

--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@ nav {
 .intro>img {
     max-width: 25vh;
     max-height: 25vh;
+    height: 100%;
     border-radius: 100%;
     margin-bottom: 5vh;
 }
 
 .restroom-locater>img {
-    max-width: 90vh;
-    max-height: 75vw;
+    display: flex;
+    flex-direction: column;
+    max-width: 90%;
+    max-height: 75%;
 }
 
 .intro>h1 {
@@ -55,8 +58,22 @@ nav {
 }
 
 .main-container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: repeat(1fr);
+}
+
+.intro {
+    grid-row: 1;
+    height: 100vh;
+}
+
+.projects {
+    grid-row: 2;
+    min-height: 100vh;
+}
+
+.contacts {
+    grid-row: 3;
 }
 
 .intro,
@@ -69,19 +86,13 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: solid red 5px;
 }
 
-.intro,
-.projects,
 .netflix-reimagined,
 .insta-dupe,
 .restroom-locater {
-    height: 100vh;
-    width: 100vw;
-}
-
-.contacts {
-    height: 50vh;
+    width: 75vw;
 }
 
 .intro {
